normalize and standarize

--- a/Project/Normalize.ipynb
+++ b/Project/Normalize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "b89e1da4",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "e7e3a622",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "e4fe44c6",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
        "[100 rows x 10 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "1bff99bd",
    "metadata": {},
    "outputs": [
@@ -297,192 +297,177 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>store</th>\n",
-       "      <th>type</th>\n",
-       "      <th>department</th>\n",
-       "      <th>date</th>\n",
-       "      <th>weekly_sales</th>\n",
-       "      <th>is_holiday</th>\n",
-       "      <th>temperature_c</th>\n",
-       "      <th>fuel_price_usd_per_l</th>\n",
-       "      <th>unemployment</th>\n",
+       "      <th>standarize</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2010-02-05</td>\n",
-       "      <td>24924.50</td>\n",
-       "      <td>False</td>\n",
-       "      <td>5.727778</td>\n",
-       "      <td>0.679451</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.035824</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2010-03-05</td>\n",
-       "      <td>21827.90</td>\n",
-       "      <td>False</td>\n",
-       "      <td>8.055556</td>\n",
-       "      <td>0.693452</td>\n",
-       "      <td>8.106</td>\n",
+       "      <td>-0.066641</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2010-04-02</td>\n",
-       "      <td>57258.43</td>\n",
-       "      <td>False</td>\n",
-       "      <td>16.816667</td>\n",
-       "      <td>0.718284</td>\n",
-       "      <td>7.808</td>\n",
+       "      <td>1.105740</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2010-05-07</td>\n",
-       "      <td>17413.94</td>\n",
-       "      <td>False</td>\n",
-       "      <td>22.527778</td>\n",
-       "      <td>0.748928</td>\n",
-       "      <td>7.808</td>\n",
+       "      <td>-0.212697</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2010-06-04</td>\n",
-       "      <td>17558.09</td>\n",
-       "      <td>False</td>\n",
-       "      <td>27.050000</td>\n",
-       "      <td>0.714586</td>\n",
-       "      <td>7.808</td>\n",
+       "      <td>-0.207927</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2010-07-02</td>\n",
-       "      <td>16333.14</td>\n",
-       "      <td>False</td>\n",
-       "      <td>27.172222</td>\n",
-       "      <td>0.705076</td>\n",
-       "      <td>7.787</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2010-08-06</td>\n",
-       "      <td>17508.41</td>\n",
-       "      <td>False</td>\n",
-       "      <td>30.644444</td>\n",
-       "      <td>0.693980</td>\n",
-       "      <td>7.787</td>\n",
+       "      <th>10769</th>\n",
+       "      <td>-0.759301</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2010-09-03</td>\n",
-       "      <td>16241.78</td>\n",
-       "      <td>False</td>\n",
-       "      <td>27.338889</td>\n",
-       "      <td>0.680772</td>\n",
-       "      <td>7.787</td>\n",
+       "      <th>10770</th>\n",
+       "      <td>-0.777335</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2010-10-01</td>\n",
-       "      <td>20094.19</td>\n",
-       "      <td>False</td>\n",
-       "      <td>22.161111</td>\n",
-       "      <td>0.687640</td>\n",
-       "      <td>7.838</td>\n",
+       "      <th>10771</th>\n",
+       "      <td>-0.774026</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>9</td>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2010-11-05</td>\n",
-       "      <td>34238.88</td>\n",
-       "      <td>False</td>\n",
-       "      <td>14.855556</td>\n",
-       "      <td>0.710359</td>\n",
-       "      <td>7.838</td>\n",
+       "      <th>10772</th>\n",
+       "      <td>-0.788915</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10773</th>\n",
+       "      <td>-0.758640</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10774 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       standarize\n",
+       "0        0.035824\n",
+       "1       -0.066641\n",
+       "2        1.105740\n",
+       "3       -0.212697\n",
+       "4       -0.207927\n",
+       "...           ...\n",
+       "10769   -0.759301\n",
+       "10770   -0.777335\n",
+       "10771   -0.774026\n",
+       "10772   -0.788915\n",
+       "10773   -0.758640\n",
+       "\n",
+       "[10774 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#standarize dataset\n",
+    "def standarize (col):\n",
+    "    mean = col.mean()\n",
+    "    std = col.std()\n",
+    "    return (col - mean) / std\n",
+    "sales_data['weekly_sales'].agg([standarize])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e0c4cf0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalize(col):\n",
+    " mean = col.mean()\n",
+    " min = col.min()\n",
+    " max = col.max()\n",
+    " std = col.std()\n",
+    " return (col - min )/ (min - max)\n",
+    "sales_data = sales_data['weekly_sales'].agg([normalize])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "36271fda",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>normalize</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.088193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.077698</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.197775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.062739</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.063227</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  store type  department        date  weekly_sales  is_holiday  \\\n",
-       "0           0      1    A           1  2010-02-05      24924.50       False   \n",
-       "1           1      1    A           1  2010-03-05      21827.90       False   \n",
-       "2           2      1    A           1  2010-04-02      57258.43       False   \n",
-       "3           3      1    A           1  2010-05-07      17413.94       False   \n",
-       "4           4      1    A           1  2010-06-04      17558.09       False   \n",
-       "5           5      1    A           1  2010-07-02      16333.14       False   \n",
-       "6           6      1    A           1  2010-08-06      17508.41       False   \n",
-       "7           7      1    A           1  2010-09-03      16241.78       False   \n",
-       "8           8      1    A           1  2010-10-01      20094.19       False   \n",
-       "9           9      1    A           1  2010-11-05      34238.88       False   \n",
-       "\n",
-       "   temperature_c  fuel_price_usd_per_l  unemployment  \n",
-       "0       5.727778              0.679451           NaN  \n",
-       "1       8.055556              0.693452         8.106  \n",
-       "2      16.816667              0.718284         7.808  \n",
-       "3      22.527778              0.748928         7.808  \n",
-       "4      27.050000              0.714586         7.808  \n",
-       "5      27.172222              0.705076         7.787  \n",
-       "6      30.644444              0.693980         7.787  \n",
-       "7      27.338889              0.680772         7.787  \n",
-       "8      22.161111              0.687640         7.838  \n",
-       "9      14.855556              0.710359         7.838  "
+       "   normalize\n",
+       "0  -0.088193\n",
+       "1  -0.077698\n",
+       "2  -0.197775\n",
+       "3  -0.062739\n",
+       "4  -0.063227"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "def normalize (col):\n",
-    "    mean = col.mean()\n",
-    "    std = col.std()\n",
-    "    return (col - mean) / std\n",
-    "sales_data['weekly_sales'].agg([normalize])\n",
-    "sales_data.head(10)"
+    "sales_data.head()"
    ]
   },
   {
