--- a/Seaborn/Seabron1st.ipynb
+++ b/Seaborn/Seabron1st.ipynb
@@ -363,6 +363,30 @@
    "source": [
     "tips['sex'].value_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e643b9d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "smoker\n",
+       "No     151\n",
+       "Yes     93\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tips['smoker'].value_counts()"
+   ]
   }
  ],
  "metadata": {
