--- a/Seaborn/Seabron1st.ipynb
+++ b/Seaborn/Seabron1st.ipynb
@@ -387,6 +387,33 @@
    "source": [
     "tips['smoker'].value_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "44c659a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "day\n",
+       "Sat     87\n",
+       "Sun     76\n",
+       "Thur    62\n",
+       "Fri     19\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "tips[\"day\"].value_counts()"
+   ]
   }
  ],
  "metadata": {
