--- a/Seaborn/Seabron1st.ipynb
+++ b/Seaborn/Seabron1st.ipynb
@@ -414,6 +414,30 @@
     "\n",
     "tips[\"day\"].value_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "431d99f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "time\n",
+       "Dinner    176\n",
+       "Lunch      68\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tips[\"time\"].value_counts()"
+   ]
   }
  ],
  "metadata": {
