--- a/Seabron1st.ipynb
+++ b/Seabron1st.ipynb
@@ -766,17 +766,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "id": "0ad0f35d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1b784e7d810>"
+       "<seaborn.axisgrid.FacetGrid at 0x1b784f9f390>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -795,7 +795,7 @@
     "sns.displot(\n",
     "    data=penguins,\n",
     "    x='species',\n",
-    " \n",
+    "    discrete=True,\n",
     "   \n",
     ")"
    ]
