--- a/Project/nor&std.ipynb
+++ b/Project/nor&std.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "0588e491",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "0f5c444f",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
        "4   5    e  15   2.5"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "6a26d7f5",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
        "np.float64(3.0276503540974917)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "3361d916",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
        "9  -1.000000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "f0610e73",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
        "9    1.486301"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "2ac7906c",
    "metadata": {},
    "outputs": [
@@ -396,7 +396,7 @@
        "      <td>False</td>\n",
        "      <td>5.727778</td>\n",
        "      <td>0.679451</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>8.106</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -548,7 +548,7 @@
        "99          99      1    A           9  2010-05-07      27588.34       False   \n",
        "\n",
        "    temperature_c  fuel_price_usd_per_l  unemployment  \n",
-       "0        5.727778              0.679451           NaN  \n",
+       "0        5.727778              0.679451         8.106  \n",
        "1        8.055556              0.693452         8.106  \n",
        "2       16.816667              0.718284         7.808  \n",
        "3       22.527778              0.748928         7.808  \n",
@@ -563,7 +563,7 @@
        "[100 rows x 10 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "67993ca1",
    "metadata": {},
    "outputs": [
@@ -628,30 +628,30 @@
        "      <td>10774.000000</td>\n",
        "      <td>10774.000000</td>\n",
        "      <td>10774.000000</td>\n",
-       "      <td>10773.000000</td>\n",
        "      <td>10774.000000</td>\n",
        "      <td>10774.000000</td>\n",
-       "      <td>10772.000000</td>\n",
+       "      <td>10774.000000</td>\n",
+       "      <td>10774.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
        "      <td>5386.500000</td>\n",
        "      <td>15.441897</td>\n",
        "      <td>45.218118</td>\n",
-       "      <td>23841.858115</td>\n",
+       "      <td>23843.950149</td>\n",
        "      <td>15.731978</td>\n",
        "      <td>0.749746</td>\n",
-       "      <td>8.082034</td>\n",
+       "      <td>8.082009</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
        "      <td>3110.330234</td>\n",
        "      <td>11.534511</td>\n",
        "      <td>29.867779</td>\n",
-       "      <td>30221.010046</td>\n",
+       "      <td>30220.387557</td>\n",
        "      <td>9.922446</td>\n",
        "      <td>0.059494</td>\n",
-       "      <td>0.624406</td>\n",
+       "      <td>0.624355</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -668,7 +668,7 @@
        "      <td>2693.250000</td>\n",
        "      <td>4.000000</td>\n",
        "      <td>20.000000</td>\n",
-       "      <td>3866.320000</td>\n",
+       "      <td>3867.115000</td>\n",
        "      <td>7.583333</td>\n",
        "      <td>0.708246</td>\n",
        "      <td>7.795000</td>\n",
@@ -678,7 +678,7 @@
        "      <td>5386.500000</td>\n",
        "      <td>13.000000</td>\n",
        "      <td>40.000000</td>\n",
-       "      <td>12045.050000</td>\n",
+       "      <td>12049.065000</td>\n",
        "      <td>16.966667</td>\n",
        "      <td>0.743381</td>\n",
        "      <td>8.099000</td>\n",
@@ -688,7 +688,7 @@
        "      <td>8079.750000</td>\n",
        "      <td>20.000000</td>\n",
        "      <td>72.000000</td>\n",
-       "      <td>32346.280000</td>\n",
+       "      <td>32349.850000</td>\n",
        "      <td>24.166667</td>\n",
        "      <td>0.781421</td>\n",
        "      <td>8.360000</td>\n",
@@ -709,19 +709,19 @@
       ],
       "text/plain": [
        "         Unnamed: 0         store    department   weekly_sales  temperature_c  \\\n",
-       "count  10774.000000  10774.000000  10774.000000   10773.000000   10774.000000   \n",
-       "mean    5386.500000     15.441897     45.218118   23841.858115      15.731978   \n",
-       "std     3110.330234     11.534511     29.867779   30221.010046       9.922446   \n",
+       "count  10774.000000  10774.000000  10774.000000   10774.000000   10774.000000   \n",
+       "mean    5386.500000     15.441897     45.218118   23843.950149      15.731978   \n",
+       "std     3110.330234     11.534511     29.867779   30220.387557       9.922446   \n",
        "min        0.000000      1.000000      1.000000   -1098.000000      -8.366667   \n",
-       "25%     2693.250000      4.000000     20.000000    3866.320000       7.583333   \n",
-       "50%     5386.500000     13.000000     40.000000   12045.050000      16.966667   \n",
-       "75%     8079.750000     20.000000     72.000000   32346.280000      24.166667   \n",
+       "25%     2693.250000      4.000000     20.000000    3867.115000       7.583333   \n",
+       "50%     5386.500000     13.000000     40.000000   12049.065000      16.966667   \n",
+       "75%     8079.750000     20.000000     72.000000   32349.850000      24.166667   \n",
        "max    10773.000000     39.000000     99.000000  293966.050000      33.827778   \n",
        "\n",
        "       fuel_price_usd_per_l  unemployment  \n",
-       "count          10774.000000  10772.000000  \n",
-       "mean               0.749746      8.082034  \n",
-       "std                0.059494      0.624406  \n",
+       "count          10774.000000  10774.000000  \n",
+       "mean               0.749746      8.082009  \n",
+       "std                0.059494      0.624355  \n",
        "min                0.664129      3.879000  \n",
        "25%                0.708246      7.795000  \n",
        "50%                0.743381      8.099000  \n",
@@ -729,7 +729,7 @@
        "max                1.107674      9.765000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "d419211e",
    "metadata": {},
    "outputs": [
@@ -768,11 +768,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "8a53b8b1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10774 entries, 0 to 10773\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column                Non-Null Count  Dtype  \n",
+      "---  ------                --------------  -----  \n",
+      " 0   Unnamed: 0            10774 non-null  int64  \n",
+      " 1   store                 10774 non-null  int64  \n",
+      " 2   type                  10774 non-null  object \n",
+      " 3   department            10774 non-null  int64  \n",
+      " 4   date                  10774 non-null  object \n",
+      " 5   weekly_sales          10774 non-null  float64\n",
+      " 6   is_holiday            10774 non-null  bool   \n",
+      " 7   temperature_c         10774 non-null  float64\n",
+      " 8   fuel_price_usd_per_l  10774 non-null  float64\n",
+      " 9   unemployment          10774 non-null  float64\n",
+      "dtypes: bool(1), float64(4), int64(3), object(2)\n",
+      "memory usage: 768.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "sales_data.info()"
+   ]
   }
  ],
  "metadata": {
